# sm64.sql

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: parsing.md
src/: db.py  everything.py  macro_object.py  macro_preset.py  main.py  object.py  workspace.code-workspace
src/sm64_sql/: __init__.py  __main__.py  area.py  behavior.py  behavior_call.py  behavior_command.py  behavior_param.py  c_parse.py  camera_trigger.py  cli.py  constant.py  course.py  course_text.py  db.py  dialog.py  everything.py  level.py  macro_object.py  macro_preset.py  mario_action.py  mario_animation.py  model.py  model_load.py  object.py  parse_utils.py  save_layout.py  sequence.py  sound.py  special.py  warp.py
tests/: test_area.py  test_behavior.py  test_behavior_call.py  test_behavior_command.py  test_behavior_param.py  test_camera_trigger.py  test_constant.py  test_course.py  test_course_text.py  test_db.py  test_dialog.py  test_integration.py  test_level.py  test_macro_object.py  test_macro_preset.py  test_mario_action.py  test_mario_animation.py  test_model.py  test_model_load.py  test_object.py  test_parse_utils.py  test_save_layout.py  test_sequence.py  test_sound.py  test_special.py  test_warp.py
tools/: build_maps.py
web/: README.md  actions.js  app.js  examples.js  graph.js  heatmap.js  index.html  map.js  maps.js  save.js  style.css  treemap.js
web/maps/: STROOP-LICENSE.txt
