[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sm64-sql"
version = "0.1.0"
description = "Load Super Mario 64 decompilation game data into a SQLite database."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Matt Kempster", email = "kidpixel@gmail.com" }]
keywords = ["sm64", "super-mario-64", "decomp", "sqlite", "rom-hacking"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment",
]
# tree-sitter parses the C function bodies in src/game/behaviors/ (see
# behavior_call.py). It is a build-time dependency only: it runs inside the
# sm64-sql CLI to produce sm64.db and never ships to the web client, which loads
# the finished database via sql.js. Pinned to 0.21.x because 0.22 changed the
# Language()/Parser() API, and 0.21.3 is the last line with Python 3.8 wheels.
dependencies = [
    "tree-sitter>=0.21,<0.22",
    "tree-sitter-c>=0.21,<0.22",
]

[project.urls]
Homepage = "https://github.com/matt-kempster/sm64.sql"
Repository = "https://github.com/matt-kempster/sm64.sql"

[project.optional-dependencies]
dev = ["pytest>=7", "black>=24", "mypy>=1"]

[project.scripts]
sm64-sql = "sm64_sql.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.8"
ignore_missing_imports = true
